# Rivulet

./: .gitignore  _commands.json  _lexicon.json  _lexicon.py  fib_pseudo.py  fibonacci.riv  interpreter.py  interpreter_old.py  lexer.py  notes.md  pyproject.toml  readme.md  requirements.txt  riv_color_sets.py  riv_interpreter.py  riv_parser.py  riv_print.py  riv_python_transpiler.py  riv_svg_generator.py  riv_themes.py  syntax.md  test_strand_int.py  tutorial.md  tutorial_fibonacci.md  zero.riv
programs/: draw_test.riv  fibonacci.riv  fibonacci1.riv  fibonacci2.riv  fibonacci3.riv  fibonacci4.riv  fibonacci5.riv  fibonacci6.riv  fibonacci7.riv  fibonacci_first_draft.riv  hello.riv  helloCompact.riv  primeTester.riv  test.riv  test2.riv  test_fib3.riv  zero.riv
rivulet/: __init__.py  _commands.json  _lexicon.json  riv_exceptions.py  riv_interpreter.py  riv_parser.py  riv_python_transpiler.py  riv_themes.py
tests/: test_glyph_loading.py  test_glyph_parsing.py  test_interpreter.py  test_lexing_errors.py  test_strand_int.py  test_strand_lexing.py
