[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rivulet"
dynamic = ["version", "dependencies", "readme"]

[project.scripts]
riv = "rivulet.riv_interpreter:main"

[tool.setuptools]
packages = ["rivulet"]

[tool.setuptools.dynamic]
version = { attr = "rivulet.__version__" }
dependencies = { file = "requirements.txt" }
readme = { file = "readme.md" }
